--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="https://github.com/liangsen2139/IFE/tarball/master" class="btn">Download .tar.gz</a>
     </section>
     <section class="main-content">
-      <a href="task7.html">task</a>
+      <a href="task7/index.html">task7</a>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/liangsen2139/IFE">Ife</a> is maintained by <a href="https://github.com/liangsen2139">liangsen2139</a>.</span>
 
