--- a/task9/index.html
+++ b/task9/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>task_1_9</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
   <header>
     <div>
@@ -15,13 +17,15 @@
       </form>
     </div>
   </header>
-  <div id="main">
+  <main id="main">
     <aside>
       <div id="user">
         <img src="images/portrait.png" alt="portrait">
         <a href="">AshenOne</a>
-        <p class="favourite"><span>110</span><br>收藏</p>
-        <p class="fans"><span>313</span><br>粉丝</p>
+        <p class="favourite"><span>110</span>
+          <br>收藏</p>
+        <p class="fans"><span>313</span>
+          <br>粉丝</p>
       </div>
       <ul id="option">
         <li class="report">
@@ -82,7 +86,7 @@
                 <br>
                 <span>人数</span>
                 <select name="number" id="number">
-                    <option value="10">10人</option>
+                  <option value="10">10人</option>
                 </select>
                 <span>成交项</span>
                 <select name="item" id="item">
@@ -90,7 +94,7 @@
                 </select>
               </li>
               <li>
-                <input type="submit" value="搜索"  id="button">
+                <input type="submit" value="搜索" id="button">
               </li>
             </ul>
           </form>
@@ -112,7 +116,7 @@
           <div class="record">
             <a href="">
               <h3>12:00 am</h3>
-              <p>1200</p> 
+              <p>1200</p>
             </a>
           </div>
           <div class="record">
@@ -125,7 +129,7 @@
             <a href="">
               <h3>02:00 pm</h3>
               <p>1500</p>
-            </a> 
+            </a>
           </div>
           <div class="record">
             <a href="">
@@ -448,44 +452,134 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td><p>1<br><span>愚人节</span></p></td>
-                <td><p><span>2</span><br>廿五</p></td>
-                <td><p><span>3</span><br>廿六</p></td>
+                <td>
+                  <p>1
+                    <br><span>愚人节</span></p>
+                </td>
+                <td>
+                  <p><span>2</span>
+                    <br>廿五</p>
+                </td>
+                <td>
+                  <p><span>3</span>
+                    <br>廿六</p>
+                </td>
               </tr>
               <tr>
-                <td><p>4<br>廿七</p></td>
-                <td><p>5<br><span>清明</span></p></td>
-                <td><p>6<br>廿九</p></td>
-                <td><p>7<br>三月</p></td>
-                <td><p>8<br>初二</p></td>
-                <td class="yellowborder"><p><span>9</span><br>初三</p></td>
-                <td><p><span>10</span><br>初四</p></td>
+                <td>
+                  <p>4
+                    <br>廿七</p>
+                </td>
+                <td>
+                  <p>5
+                    <br><span>清明</span></p>
+                </td>
+                <td>
+                  <p>6
+                    <br>廿九</p>
+                </td>
+                <td>
+                  <p>7
+                    <br>三月</p>
+                </td>
+                <td>
+                  <p>8
+                    <br>初二</p>
+                </td>
+                <td class="yellowborder">
+                  <p><span>9</span>
+                    <br>初三</p>
+                </td>
+                <td>
+                  <p><span>10</span>
+                    <br>初四</p>
+                </td>
               </tr>
               <tr>
-                <td><p>11<br>初五</p></td>
-                <td class="yellowborder"><p>12 <br>初六</p></td>
-                <td><p>13<br>初七</p></td>
-                <td><p>14<br>初八</p></td>
-                <td><p>15<br>初九</p></td>
-                <td><p><span>16</span><br>初十</p></td>
-                <td><p><span>17</span><br>十一</p></td>
+                <td>
+                  <p>11
+                    <br>初五</p>
+                </td>
+                <td class="yellowborder">
+                  <p>12
+                    <br>初六</p>
+                </td>
+                <td>
+                  <p>13
+                    <br>初七</p>
+                </td>
+                <td>
+                  <p>14
+                    <br>初八</p>
+                </td>
+                <td>
+                  <p>15
+                    <br>初九</p>
+                </td>
+                <td>
+                  <p><span>16</span>
+                    <br>初十</p>
+                </td>
+                <td>
+                  <p><span>17</span>
+                    <br>十一</p>
+                </td>
               </tr>
               <tr>
-                <td><p>18<br>十二</p></td>
-                <td class="yellowborder"><p>19 <br>十三</p></td>
-                <td><p>20<br>十四</p></td>
-                <td><p>21<br>十五</p></td>
-                <td><p>22<br>十六</p></td>
-                <td><p><span>23</span><br>十七</p></td>
-                <td><p><span>24</span><br>十八</p></td>
+                <td>
+                  <p>18
+                    <br>十二</p>
+                </td>
+                <td class="yellowborder">
+                  <p>19
+                    <br>十三</p>
+                </td>
+                <td>
+                  <p>20
+                    <br>十四</p>
+                </td>
+                <td>
+                  <p>21
+                    <br>十五</p>
+                </td>
+                <td>
+                  <p>22
+                    <br>十六</p>
+                </td>
+                <td>
+                  <p><span>23</span>
+                    <br>十七</p>
+                </td>
+                <td>
+                  <p><span>24</span>
+                    <br>十八</p>
+                </td>
               </tr>
               <tr>
-                <td><p>25<br>十九</p></td>
-                <td><p>26<br>廿十</p></td>
-                <td><p>27<br>廿一</p></td>
-                <td><p>28<br>廿二</p></td>
-                <td><p>29<br>廿三</p></td>
-                <td><p><span>30</span><br>廿四</p></td>
+                <td>
+                  <p>25
+                    <br>十九</p>
+                </td>
+                <td>
+                  <p>26
+                    <br>廿十</p>
+                </td>
+                <td>
+                  <p>27
+                    <br>廿一</p>
+                </td>
+                <td>
+                  <p>28
+                    <br>廿二</p>
+                </td>
+                <td>
+                  <p>29
+                    <br>廿三</p>
+                </td>
+                <td>
+                  <p><span>30</span>
+                    <br>廿四</p>
+                </td>
                 <td></td>
               </tr>
             </table>
@@ -553,6 +647,6 @@
         </div>
       </div>
     </div>
-  </body>
+  </main>
+</body>
 </html>
-
