--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
       <a href="https://github.com/liangsen2139/IFE/tarball/master" class="btn">Download .tar.gz</a>
     </section>
     <section class="main-content">
-      <a href="task7/index.html">task7</a>
-      <a href="task8/index.html">task8</a>
-      <a href="task9/index.html">task9</a>
-      <a href="task10/index.html">task10</a>
+      <a href="task7/index.html">任务七：实现常见的技术产品官网的页面架构及样式布局</a>
+      <a href="task8/index.html">任务八：响应式网格（栅格化）布局</a>
+      <a href="task9/index.html">任务九：使用HTML/CSS实现一个复杂页面</a>
+      <a href="task10/index.html">任务十：Flexbox 布局练习</a>
+      <a href="task11/index.html">任务十一：移动Web页面布局实践</a>
       <a href="task19/index.html">task19</a>
       <a href="task20/index.html">task20</a>
       <a href="task21/index.html">task21</a>
