--- a/task7/index.html
+++ b/task7/index.html
@@ -10,18 +10,18 @@
     <img src="images/logo.png" alt="New World">
     <span>新世界</span>
     <ul>
-      <li><a href="" class="direction">首页</a></li>
-      <li><a href="" class="direction">最新活动</a></li>
-      <li><a href="" class="direction">项目介绍</a></li>
-      <li><a href="" class="direction">爱心社区</a></li>
-      <li><a href="" class="direction">关于我们</a></li>
-      <li  id="login"><a href="">登录</a></li>
+      <li><a href="#" class="direction">首页</a></li>
+      <li><a href="#" class="direction">最新活动</a></li>
+      <li><a href="#" class="direction">项目介绍</a></li>
+      <li><a href="#" class="direction">爱心社区</a></li>
+      <li><a href="#" class="direction">关于我们</a></li>
+      <li  id="login"><a href="#">登录</a></li>
     </ul>
   </nav>
   <div id="experience">
     <h1>Time of new life</h1>
     <p>新时代，年轻的人们让我们在一起<br>体验新生活，享受新生活</p>
-    <a href="">开始体验</a>
+    <a href="#">开始体验</a>
   </div>
   <div id="effect">
     <ul>
@@ -76,22 +76,22 @@
   <div id="action">
     <ul>
       <li id="beijing">
-        <img src="images/action_1.png" alt=" ">
+        <img src="images/action_1.jpg" alt=" ">
         <h3>北京活动</h3>
         <p>新社区大联盟</p>
       </li>
       <li id="shanghai">
         <h3>上海活动</h3>
         <p>夜上海新景观探索</p>
-        <img src="images/action_2.png" alt="">
+        <img src="images/action_2.jpg" alt="">
       </li>
       <li id="shenzhen">
-        <img src="images/action_3.png" alt="">
+        <img src="images/action_3.jpg" alt="">
         <h3>深圳活动</h3>
         <p>全新海岸线观点站</p>
       </li>
       <li id="xianggang">
-        <img src="images/action_4.png" alt="">
+        <img src="images/action_4.jpg" alt="">
         <h3>香港活动</h3>
         <p>奢侈消费大派送</p>
       </li>
@@ -103,18 +103,18 @@
     <p>新世界是个新世界新世界是个新世界</p>
     <p>新世界是个新世界新世界是个新世界</p>
     <p>新世界是个新世界</p>
-    <a href="">更多详情</a>
+    <a href="#">更多详情</a>
     <img src="images/gundong.png" alt="">
   </div>
   <div id="red">
     <p>新时代<br>关于爱生活的我们</p>
-    <a href="">查看更多</a>
+    <a href="#">查看更多</a>
   </div>
   <div id="white">
     <p>新时代<br>关于爱生活的我们</p>
-    <a href="">查看更多</a>
+    <a href="#">查看更多</a>
   </div>
-  <img src="images/life.png" alt="">
+  <img src="images/life.jpg" alt="">
   <div id="volunteer">
     <h3>成为我们的志愿者</h3>
     <p>新世界的大家庭需要每一个爱生活的人的加入，如果你够年轻，有梦想，有激情<br>那就不要犹豫，快来加入我们，成为改变所有人生活的人
@@ -162,15 +162,15 @@
       <input type="mail" placeholder="someone@email.com"><input type="submit">
     </form>
     <ul>
-      <li><a href=""><img src="images/tecent.png" alt=""></a></li>
-      <li><a href=""><img src="images/weibo.png" alt=""></a></li>
-      <li><a href=""><img src="images/feiniao.png" alt=""></a></li>
-      <li><a href=""><img src="images/network.png" alt=""></a></li>
+      <li><a href="#"><img src="images/tecent.png" alt=""></a></li>
+      <li><a href="#"><img src="images/weibo.png" alt=""></a></li>
+      <li><a href="#"><img src="images/feiniao.png" alt=""></a></li>
+      <li><a href="#"><img src="images/network.png" alt=""></a></li>
     </ul>
   </div>
   <footer>
     <p class="new2016">@2016新世界</p>
-    <a href="">Back to top</a>
+    <a href="#">Back to top</a>
   </footer>
 </body>
 </html>
