--- a/task21/index.html
+++ b/task21/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tag</title>
+  <title>任务二十一：基础JavaScript练习（四）</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
