--- a/task22/index.html
+++ b/task22/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Two Tree</title>
+  <title>任务二十二：JavaScript和树（一）</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
