--- a/task30/index.html
+++ b/task30/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task30</title>
+  <title>任务三十：表单（二）多个表单项的动态校验</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
