--- a/task32/index.html
+++ b/task32/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task32</title>
+  <title>任务三十二：表单（四）实现表单自动生成工厂</title>
 </head>
 <body>
   <div id="useroption">
