--- a/task33_34_35/index.html
+++ b/task33_34_35/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task33_34_35</title>
+  <title>任务三十五：听指令的小方块（三）</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
