--- a/task10/index.html
+++ b/task10/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flex</title>
+  <title>任务十：Flexbox 布局练习</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
