--- a/task19/index.html
+++ b/task19/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Queue</title>
+  <title>任务十九：基础JavaScript练习（二）</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
