--- a/task23-24/index.html
+++ b/task23-24/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task23</title>
+  <title>任务二十四：JavaScript和树（三）</title>
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="client.js"></script>
 </head>
