--- a/task25/index.html
+++ b/task25/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task25</title>
+  <title>任务二十五：JavaScript和树（四）</title>
   <link rel="stylesheet" href="style.css">
   <script src="client.js"></script>
 </head>
