--- a/task28/index.html
+++ b/task28/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task28</title>
+  <title>任务二十八：行星与飞船（三）</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
