--- a/task31/index.html
+++ b/task31/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task31</title>
+  <title>任务三十一：表单（三）联动</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
