--- a/task7/index.html
+++ b/task7/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
-  <title>新世界</title>
+  <title>任务七：实现常见的技术产品官网的页面架构及样式布局</title>
 </head>
 <body>
   <nav>
