--- a/task8/index.html
+++ b/task8/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bootstrap</title>
+  <title>任务八：响应式网格（栅格化）布局</title>
   <link rel="stylesheet" href="boot.css">
 </head>
 <body>
