--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Ife</h1>
+      <h1 class="project-name">IFE</h1>
       <h2 class="project-tagline"></h2>
       <a href="https://github.com/liangsen2139/IFE" class="btn">View on GitHub</a>
       <a href="https://github.com/liangsen2139/IFE/zipball/master" class="btn">Download .zip</a>
