--- a/task38_39/index.html
+++ b/task38_39/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>task38_39</title>
+  <title>任务三十九：UI组件之冻结行列表格</title>
   <link rel="stylesheet" href="main.css">
   <link rel="icon" href="favicon.ico">
 </head>
