--- a/task43/index.html
+++ b/task43/index.html
@@ -5,8 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="clip.css">
   <link rel="stylesheet" href="index.css">
-  <script src="https://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
-  <title>Document</title>
+  <title>任务四十三：多功能相册之拼图布局</title>
 </head>
 <body>
   <div class="album">
@@ -43,6 +42,5 @@
     <img src="http://pic4.nipic.com/20091215/2396136_140959028451_2.jpg" alt="">
   </div>
   <script src="clip.js"></script>
-  <script src="index.js"></script>
 </body>
 </html>
