--- a/task7/index.html
+++ b/task7/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style.css">
   <title>任务七：实现常见的技术产品官网的页面架构及样式布局</title>
 </head>
 <body>
