--- a/task9/index.html
+++ b/task9/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>任务九：使用HTML/CSS实现一个复杂页面</title>
+  <title>统计数据页面</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
