--- a/task51/demo/index.html
+++ b/task51/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>任务五十一：多功能相册</title>
+  <title>多功能相册</title>
   <link rel="stylesheet" href="Album.css">
   <link rel="stylesheet" href="index.css">
   <script src="Album.js"></script>
